--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 server.port=18080
-#springboot\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uDB4E\uDF37\uFFFD\uFFFD\uFFFD\u012C\uFFFD\u03F2\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u013F\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u1C68404\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u04AA\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\u013F\uFFFD\uFFFD\uFFFD\uFFFD\u04AA\u02B9\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD\uFFFD
-server.servlet.context-path=/demo
+#server.servlet.context-path=/demo
 
+spring.datasource.url=jdbc:mysql://rm-2vc12b3905ckyww61po.mysql.cn-chengdu.rds.aliyuncs.com:3306/springboot?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8
+spring.datasource.username=wqs
+spring.datasource.password=123qweasd
+#spring.datasource.url=jdbc:mysql://dev.wqs.com:3306/springboot?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8
+#spring.datasource.username=root
+#spring.datasource.password=123456
 
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.html
