--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,19 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.aliyun.fc.runtime</groupId>
+			<artifactId>fc-java-core</artifactId>
+			<version>1.3.0</version>
+		</dependency>
 
+
+		<!-- 开发工具包-->
+		<dependency>
+			<groupId>com.aliyun</groupId>
+			<artifactId>aliyun-java-sdk-fc</artifactId>
+			<version>1.8.4</version>
+		</dependency>
 		<!--<dependency>
 			<groupId>org.apache.shiro</groupId>
 			<artifactId>shiro-spring</artifactId>
