--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,15 @@ server.port=18080
 
 spring.datasource.url=jdbc:mysql://rm-2vc12b3905ckyww61po.mysql.cn-chengdu.rds.aliyuncs.com:3306/springboot?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8
 spring.datasource.username=wqs
-spring.datasource.password=123qweasd
+spring.datasource.password=123QWEasd
 #spring.datasource.url=jdbc:mysql://dev.wqs.com:3306/springboot?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8
 #spring.datasource.username=root
 #spring.datasource.password=123456
 
 spring.mvc.view.prefix=/
 spring.mvc.view.suffix=.html
+
+#\u5F00\u542F\u9A7C\u5CF0\u529F\u80FD
+#\u6570\u636E\u5E93\u8868\u5217\uFF1Auser_name
+#\u5B9E\u4F53\u7C7B\u5C5E\u6027\uFF1AuserName
+mybatis.configuration.map-underscore-to-camel-case=true
